<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>

    <!-- Home -->
    <string name="app_name">Swap</string>
    <string name="menu_settings">Settings</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>

    <!-- Buy -->
    <string name="title_section3">Nearby</string>
    <string name="title_section2">Price</string>
    <string name="title_section1">Recent</string>
    <string name="title_activity_buy">HOME</string>
    <string name="buy_search">Search Swap</string>
    <string name="buy_location">Map</string>
    <string name="search_hint">Search listings</string>

    <!-- Item -->
    <string name="title_activity_item_detail">Item</string>
    <string name="contact_button">Contact Seller</string>

    <!-- Sell -->
    <string name="title_activity_sell">SELL</string>
    <string name="sell_title">Title</string>
    <string name="sell_description">Description</string>
    <string name="sell_price">Price</string>
    <string name="hint_title">title here</string>
    <string name="hint_description">description here</string>
    <string name="hint_price">price here</string>
    <string name="btn_send">Post</string>
    <string name="toggle_featured">Featured</string>
    <string name="toggle_on">Yes</string>
    <string name="toggle_off">No</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rotate">Rotate 90 degrees</string>
    <string name="take_photo">Take Photo</string>

    <!-- Sell Summary -->
    <string name="title_activity_sell_summary">SellSummaryActivity</string>
    <string name="btnSellItemText">New Post</string>
    <string name="title_tab1">Current</string>
    <string name="title_tab2">History</string>
    <string name="message_subscribe">Want to post more?</string>
    <string name="button_subscribe">Learn Here</string>

    <!-- Map -->
    <string name="title_activity_map">Map</string>

    <!-- Edit Item -->
    <string name="title_activity_premium_info">PremiumInfoActivity</string>
    
    <!-- Premium Info -->
    <string name="premium_program_title">Swap Premium Program</string>
    <string name="premium_program_description">Once you become premium user\nyou will be able to blabla..</string>
    <string name="become_premium_button">Become Premium User</string>

    <string name="title_activity_edit_item">Edit</string>
    <string name="title_activity_item_search">ItemSearchActivity</string>


</resources>