<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PremiumInfoActivity" >

    <Button
        android:id="@+id/becomePremiumUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/become_premium_button"
        android:textColor="@color/white"
	    android:background="@drawable/btn_red"
	    android:layout_marginLeft="2dp"
	    android:layout_marginRight="2dp"
	    android:layout_marginBottom="2dp"
	    android:onClick="becomePremiumUserClicked" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/premium_program_title" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="56dp"
        android:text="@string/premium_program_description" />

</RelativeLayout>