<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/frag_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
   </LinearLayout>

    <Button
        android:id="@+id/btnSellItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="2dp"
        android:text="@string/btnSellItemText"
        android:textColor="#FFFFFF"
        android:background="#9f0202"
        android:onClick="btnSellItemClicked" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSellItem"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:text="@string/message_subscribe"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSubscribe"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:background="#ffc92b"
        android:text="@string/button_subscribe"
        android:visibility="invisible"/>"
    
</RelativeLayout>