<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity"
    android:background="#FFF" >

    
    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:background="#FFE4B5"
         >


        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher"
        android:onClick="launchCamera" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtDescription"
        android:layout_marginTop="31dp"
        android:background="#FFE4B5"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="28dp"
        android:background="#FFE4B5"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/checkFeatured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrice"
        android:layout_marginTop="32dp"
        android:text="@string/check_featured"
        android:textColor="#000" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:onClick="sendButtonClicked"
        android:text="@string/btn_send" />

"

</RelativeLayout>