<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".HomeActivity" >
	
    <TextView  
        android:id="@+id/HomeLogo"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"  
        android:gravity="center_horizontal"  
        android:textSize="100sp" 
        android:textColor="#94493D"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true" >
    	
        <Button
	        android:id="@+id/button_sell"
	        android:layout_width="0.0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_marginBottom="2dp"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:layout_weight="1.0"
	        android:text="@string/button_sell"
	        android:textColor="#FFFFFF"
	        android:background="#94493D"
	        android:onClick="sellButtonTap" />
	    
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:padding="1dp"
			android:layout_gravity="center_horizontal"/>
	    
	    <Button
	        android:id="@+id/button_buy"
	        android:layout_width="0.0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	        android:layout_marginBottom="2dp"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:layout_weight="1.0"
	        android:text="@string/button_buy"
	        android:textColor="#FFFFFF"
	        android:background="#94493D"
	        android:onClick="buyButtonTap" />
	    	    
    </LinearLayout>
</RelativeLayout>